--- a/src/css/board.css
+++ b/src/css/board.css
@@ -1,13 +1,7 @@
-:root {
-	--board-background: none;
-	--border-color: #f6546a;
-	--border-thickness: 5px;
-}
 
 .board{
 	width: 30vw;
 	height: 50%;
-	background-color: var(--board-background);
 	display: flex;
 	align-items: flex-start;
 	flex-direction: row;
@@ -20,57 +14,25 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	color: whitesmoke;
-	font-family: 'Bellefair', serif;
+	color: yellow;
+	font-family:Arial, Helvetica, sans-serif;
 	font-style: italic;
 	font-weight: 700;
-	font-size: 6rem;
+	font-size: 60px;
 }
 
-.input-1{
-	border-right: var(--border-thickness)
-	dashed var(--border-color);
-	border-bottom: var(--border-thickness)
-	dashed var(--border-color);
+ .input-1,.input-2,.input-4,.input-5{
+	border-right: 5px solid red;
+	border-bottom: 5px solid red;
 }
 
-.input-2{
-	border-right: var(--border-thickness)
-	dashed var(--border-color);
-	border-bottom: var(--border-thickness)
-	dashed var(--border-color);
+
+.input-3,.input-6{
+	border-bottom: 5px solid red;
 }
 
-.input-3{
-	border-bottom: var(--border-thickness)
-	dashed var(--border-color);
+.input-7,.input-8{
+	border-right: 5px solid red;
 }
 
-.input-4{
-	border-right: var(--border-thickness)
-	dashed var(--border-color);
-	border-bottom: var(--border-thickness)
-	dashed var(--border-color);
-}
-
-.input-5{
-	border-right: var(--border-thickness)
-	dashed var(--border-color);
-	border-bottom: var(--border-thickness)
-	dashed var(--border-color);
-}
-
-.input-6{
-	border-bottom: var(--border-thickness)
-	dashed var(--border-color);
-}
-
-.input-7{
-	border-right: var(--border-thickness)
-	dashed var(--border-color);
-}
-
-.input-8{
-	border-right: var(--border-thickness)
-	dashed var(--border-color);
-}
+ 
